--- a/src/sass/blocks/_main.sass
+++ b/src/sass/blocks/_main.sass
@@ -16,14 +16,13 @@
     &_blocks
         display: flex
         background: #F8F8F8;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
         border-radius: 10px
         width: 517px;
         height: 314px;
         left: 317px;
         top: 101px; 
-        background: #F8F8F8;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        background: #F8F8F8; 
         border-radius: 10px 
         .title 
             font-weight: 600 
@@ -54,6 +53,7 @@
             margin-left: 40px
             .input
                 position: relative
+                
                 label
                     display: flex
                     z-index: 2
@@ -89,6 +89,9 @@
                     line-height: 18px 
                     color: #494949
                     padding-left: 10px
+                    outline: none
+                    &:focus
+                        border: 1px solid #FFB800
             .slider
                 display: flex
                 flex-direction: column
