--- a/src/sass/blocks/_some.sass
+++ b/src/sass/blocks/_some.sass
@@ -1,2 +1,8 @@
 .mt-25
     margin-top: 25px
+.rb
+    border: 1px solid red!important
+    &::placeholder
+        color: red
+.red_text
+    color: red!important
